[package]
name = "dbus-mqtt"
version = "0.1.0"
authors = ["Mariusz Kryński <mrk@sed.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-protocol = "0.8"
log = "0.4"
clap = "2.33"
env_logger = "0.7"
uuid = { version = "0.8", features = ["v4"] }
dbus = "0.8"
serde_json = "1.0"
roxmltree = "0.11"
